<resources>
    <string name="app_name">P2</string>
    <string name="desc">add app</string>
    <string name="cancel">Cancel</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="join">Join Team</string>
    <string name="suggestedtime">Suggested shared time</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="addapps">Add More</string>
    <string name="change">Change</string>
    <string name="joinMessage">Let us battle against screentime together! By joining me, you will accept a shared time during the week and apps to block during hours set by you! We will keep each other accountable by using the time evenly.</string>
    <string name="profile">Profile</string>
    <string name="firstPlace">First Place</string>
    <string name="secondPlace">Second Place</string>
    <string name="thirdPlace">Third Place</string>
    <string name="fourthPlace">Fourth Place</string>
    <string name="fifthPlace">Fifth Place</string>
    <string name="forgot">Forgot Password?</string>
    <string name="service_status">Service Status</string>
    <string name="agreed_time">Time for the week</string>
    <string name="blocked_apps">Blocked Apps</string>
    <string name="add_plus">+ Add Apps</string>

</resources>