<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="#0F172A"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <EditText
        android:id="@+id/Username"
        android:layout_width="243dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#F59E0B"
        android:textColorHint="#67F59E0B"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="298dp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="#F59E0B"
        android:textColorHint="#67F59E0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="99dp"
        android:layout_height="37dp"
        android:layout_marginTop="80dp"
        android:text="@string/register"
        android:textColor="#F59E0B"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="243dp"
        android:layout_height="62dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColor="#F59E0B"
        android:textColorHint="#67F59E0B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        app:layout_constraintVertical_bias="0.064"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="245dp"
        android:layout_height="64dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:textColor="#F59E0B"
        android:textColorHint="#67F59E0B"
        app:layout_constraintBottom_toTopOf="@+id/Username_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Register"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#14BBAB"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPassword"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="#9B9898"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp"
        app:layout_constraintVertical_bias="0.104"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>